--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -21,7 +21,7 @@
     {%block head%} {%endblock%}
   </head>
   <body>
-    {%include 'navbar.html'%} {%block body%} {%endblock%} {%include
-    'footer.html'%}
+      {%include 'navbar.html'%} <main> {%block body%} {%endblock%} </main>{%include
+      'footer.html'%}
   </body>
 </html>
